<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:baselineAligned="false">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#42A5F5"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arro_bnw"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:rotationX="0.5"
            android:rotationY="0.5"
            android:rotation="180"
            android:onClick="onBackBtn"
            android:padding="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_feedback"
            android:layout_marginRight="66dp"
            android:textColor="@android:color/white"
            android:textSize="28sp" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/temp_logo_menu" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                android:weightSum="1">

                <EditText
                    android:id="@+id/feedback_edit_text"
                    android:layout_width="300dp"
                    android:layout_height="170dp"
                    android:background="@drawable/edit_text_feedback"
                    android:gravity="top|left"
                    android:hint="@string/feedback_description"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:textColorHint="#cccccc"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="256dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/feedback_edit_text_mail"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_feedback"
                        android:gravity="left"
                        android:hint="@string/feedback_description_email"
                        android:inputType="textEmailAddress"
                        android:padding="15dp"
                        android:textColorHint="#cccccc"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/feedback_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp">

                        <RadioButton
                            android:id="@+id/radioButtonSuggestion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="#cccccc"
                            android:text="@string/suggestion"
                            android:textColor="#cccccc"
                            android:textSize="16sp"
                            tools:targetApi="lollipop" />

                        <RadioButton
                            android:id="@+id/radioButtonProblem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="#cccccc"
                            android:text="@string/problem"
                            android:textColor="#cccccc"
                            android:textSize="16sp"
                            tools:targetApi="lollipop" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/send_feedback"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="25dp"
                        android:gravity="center"
                        android:background="@drawable/btn_sure"
                        android:text="@string/send"
                        android:textColor="#ffffff"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>


